--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <div class="header_area">
             <div class="logo">
-                <a href="#home"><img src="/frontend/currency-exchange.png" alt="logo"></a>
+                <a href="#home"><img src="currency-exchange.png" alt="logo"></a>
             </div>
             <div class="navbar-collapse collapse">
                 <ul>
